fix: bag on mobiles now better

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -309,13 +309,23 @@ a:-webkit-any-link {
 
 /* -------------------------------- Media Queries */
 
-/* smallest screen size (up to 767px) */
+/* smallest screen size (up to 320px) */
 @media (max-width: 320px) {
   .custom-toast {
     max-width: 296px;
   }
 }
 
+/* mobile screen size (up to 600px) */
+@media (max-width: 600px) {
+  .mobile-bottom-btn {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 1000;
+  }
+}
 /* Mobile Styles (up to 767px) */
 @media (max-width: 767px) {
   .mobile-header {
